# ellip2

./: .gitignore  DATA.md  DEPLOY.md  LICENSE  Makefile  README.md  REPRODUCE.md  RESULTS.md  RUNBOOK.md  facts.json  plan.md  pyproject.toml
.claude/: settings.json
.claude/commands/: ralph-planner.md
.claude/hooks/: stop-hook.sh
.github/workflows/: ci.yml
configs/: config.yaml
configs/dataset/: elliptic2.yaml
configs/features/: default.yaml
configs/gnn/: graphsage.yaml
configs/infra/: g5.yaml
configs/llm/: bedrock.yaml
configs/pu/: nnpu.yaml  supervised.yaml
docker/: Dockerfile
docs/: decisions.md  stage2-model-choice.md
docs/examples/: DEMO.md  README.md  WALKTHROUGH.md  card_001_ccbg4343454.md  card_002_ccbg33939080.md  card_003_ccbg7106753.md  card_004_ccbg7301164.md  card_005_ccbg25364052.md  card_006_ccbg7184979.md  index.md
infra/: userdata.sh
notebooks/: ellip2_benchmark.ipynb  kernel-metadata.json
plans/: guardrails.md  prd.json  progress.md  publishing_facts.md
scripts/: build_features.py  demo.py  discover.py  discover_subgraphs.py  eval_recovery.py  extract_internal_edges.py  investigate.py  make_endpoints.py  make_split.py  make_typology_signal.py  report_leads.py  score.py  score_border.py  score_cluster.py  score_subgraph.py  train.py  train_border.py  train_cluster.py  train_subgraph.py  verify.sh
scripts/ralph/: ralph.sh
src/ellip2/: __init__.py
src/ellip2/data/: __init__.py  ingest.py  schema.py
src/ellip2/discovery/: __init__.py  background.py  discover.py  eval_recovery.py
src/ellip2/eval/: __init__.py  leakage_checks.py  pu_metrics.py  splits.py  splits_cli.py
src/ellip2/exit_paths/: __init__.py  path_search.py  recover.py
src/ellip2/features/: __init__.py  build.py  degree.py  edge_aggs.py  flow_concentration.py  internal_edges.py  neighborhood.py  path_role.py  temporal.py
src/ellip2/graph/: __init__.py  neighbor_sampling.py  pyg_data.py
src/ellip2/llm/: __init__.py  bedrock_client.py  serialize_subgraph.py  typology_graph.py
src/ellip2/pu/: __init__.py  border_assembly.py  cluster_score.py  encoder.py  nnpu_loss.py  prior_estimation.py  score.py  score_border.py  score_subgraph.py  subgraph_pool.py  train.py  train_border.py  train_subgraph.py  trainer.py
src/ellip2/report/: __init__.py  investigate.py  leads.py  render.py
tests/: test_background_discovery.py  test_bedrock_client.py  test_border_model.py  test_build_features.py  test_cluster_score.py  test_configs.py  test_degree.py  test_discover.py  test_docs.py  test_edge_aggs.py  test_encoder.py  test_eval_recovery.py  test_flow_concentration.py  test_ingest.py  test_internal_edges.py  test_investigate.py  test_leakage_checks.py  test_neighbor_sampling.py  test_neighborhood.py  test_nnpu_loss.py  test_path_role.py  test_path_search.py  test_prior_estimation.py  test_pu_metrics.py  test_published_numbers.py  test_pyg_data.py  test_recover.py  test_render.py  test_report_leads.py  test_serialize_subgraph.py  test_splits.py  test_stage2_cli.py  test_subgraph_model.py  test_temporal.py  test_trainer.py  test_typology_graph.py
